Namechange LLama --> HF (Huggingface)

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +40,10 @@
     "####################################################################\n",
     "#                          Code Generation                         #\n",
     "####################################################################\n",
-    "from lightbench.loaders.llama_loader import LLamaModelLoader\n",
+    "from lightbench.loaders.huggingface_model_loader import HFModelLoader\n",
     "from lightbench.evaluators.code_evaluator import CodeEvaluator\n",
     "   \n",
-    "model_loader = LLamaModelLoader(\"meta-llama/Llama-3.2-1B-Instruct\", quantize=False)\n",
+    "model_loader = HFModelLoader(\"meta-llama/Llama-3.2-1B-Instruct\", quantize=False)\n",
     "code_evaluator = CodeEvaluator(model_loader, num_test_limit=3, few_shot=True, verbose=False)\n",
     "code_evaluator.run()\n",
     "code_evaluator.print_summary()\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,10 +88,10 @@
     "####################################################################\n",
     "from lightbench.evaluators.text_evaluator import TextEvaluator\n",
     "from lightbench.metrics.llm_judge import LLMJudge\n",
-    "from lightbench.loaders.llama_loader import LLamaModelLoader\n",
+    "from lightbench.loaders.huggingface_model_loader import HFModelLoader\n",
     "\n",
     "judge = LLMJudge()\n",
-    "model_loader = LLamaModelLoader(\"meta-llama/Llama-3.2-1B-Instruct\", quantize=False)\n",
+    "model_loader = HFModelLoader(\"meta-llama/Llama-3.2-1B-Instruct\", quantize=False)\n",
     "text_evaluator = TextEvaluator(model_loader, judge, num_test_limit=3, verbose=False)\n",
     "text_evaluator.run()\n",
     "text_evaluator.print_summary()\n",
